--- a/style .css
+++ b/style .css
@@ -67,8 +67,8 @@ input {
 button {
     width: 80%;
     padding: 12px;
-    background-color: blue;
-    color: white;
+    background-color: yellow;
+    color: black;
     border: none;
     border-radius: 4px;
     font-weight: bold;
@@ -79,7 +79,7 @@ button {
 }
 
 button:hover {
-    background-color: darkblue;
+    background-color: lightyellow;
 }
 
 .result {
